Fix for not showing showLayers tab.

--- a/theme/norgeskart/_pure_style.scss
+++ b/theme/norgeskart/_pure_style.scss
@@ -1234,7 +1234,7 @@ button {
 }
 .tabs-menu .current {background-color: #fff;}
 .tab {width: auto; }
-.tab-content {padding: 10px 0; display: none;}
+.tab-content {padding: 10px 0; }
 #addLayerTab {display: block; }
 .olControlLoadingPanel {
   background-image:url("../default/img/loading.gif");
